tests/dataset/tpc-ds/compiler/c/q14.error
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c: In function ‘test_TPCDS_Q14_cross_channel’:
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:367:54: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  367 |   if (test_TPCDS_Q14_cross_channel_result.len != tmp1.len) {
      |                                                      ^
      |                                                      ->
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:371:63: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  371 |       if (test_TPCDS_Q14_cross_channel_result.data[i3] != tmp1.data[i3]) {
      |                                                               ^
      |                                                               ->
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:416:10: error: conflicting types for ‘avg_sales’; have ‘double’
  416 |   double avg_sales = _avg_float(avg_sales);
      |          ^~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:412:14: note: previous definition of ‘avg_sales’ with type ‘list_float’
  412 |   list_float avg_sales = list_float_create(3);
      |              ^~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:435:26: error: expected ‘)’ before ‘in’
  435 |       if (!(ss.ss_item_sk in(tmp4))) {
      |            ~             ^~~
      |                          )
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:440:39: error: ‘store_filtered_item_t’ has no member named ‘name’
  440 |         if (strcmp(store_filtered[i10].name,
      |                                       ^
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:441:32: error: incompatible type for argument 2 of ‘strcmp’
  441 |                    (tmp_item_t){
      |                                ^
      |                                |
      |                                tmp_item_t
  442 |                        .brand_id = 1, .class_id = 1, .category_id = 1}) == 0) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:4:
/usr/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘tmp_item_t’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:448:43: error: ‘store_filtered_item_t’ has no member named ‘name’
  448 |         store_filtered[store_filtered_len].name =
      |                                           ^
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:450:43: error: ‘store_filtered_item_t’ has no member named ‘count’
  450 |         store_filtered[store_filtered_len].count = 1;
      |                                           ^
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:454:29: error: ‘store_filtered_item_t’ has no member named ‘count’
  454 |         store_filtered[tmp9].count++;
      |                             ^
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:483:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  483 |     _json_string(it.channel);
      |                  ~~^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:72:32: note: expected ‘char *’ but argument is of type ‘const char *’
   72 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq144271914586/001/prog.c:507:41: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  507 |   test_TPCDS_Q14_cross_channel_result = result;
      |                                         ^~~~~~
